bauer/tests/ui/adapter-wrong-type.fail.stderr
error[E0308]: mismatched types
 --> tests/ui/adapter-wrong-type.fail.rs:5:34
  |
5 |     #[builder(adapter = |x: u32| char::from_u32(x))]
  |                                  ^^^^^^^^^^^^^^^^^ expected `char`, found `Option<char>`
6 |     field: char,
  |            ---- expected due to this
  |
  = note: expected type `char`
             found enum `Option<char>`
help: consider using `Option::expect` to unwrap the `Option<char>` value, panicking if the value is an `Option::None`
  |
5 |     #[builder(adapter = |x: u32| char::from_u32(x).expect("REASON"))]
  |                                                   +++++++++++++++++
